--- a/engines/entity/app/views/entity/interests/new.html.haml
+++ b/engines/entity/app/views/entity/interests/new.html.haml
@@ -21,7 +21,7 @@
         %p
           %b
             Para verificar os endereços referentes ao grupos, acesse o
-            %a{href: 'http://www.codhab.df.gov.br/uploads/archive/files/c784c63fdef02cd8ce723d2a972dee48.pdf', target: '_blank'} Edital.
+            %a{href: 'http://www.codhab.df.gov.br/pagina/226'} Edital.
       = render 'form'
   - else
     .text-center
