Atualização de sistema

--- a/engines/regularization/app/views/regularization/solicitations/error.html.haml
+++ b/engines/regularization/app/views/regularization/solicitations/error.html.haml
@@ -6,12 +6,12 @@
 .ui.grid.container
   .column.content-form
     %p
-      Verificamos que você já possui um CPF cadastrado na 
+      Verificamos que você já possui um CPF cadastrado em outro programa na 
       %b
         CODHAB.
       Para abrir um requerimento você precisa logar na área do usuário utilizando seu CPF e sua Senha cadastrada.
-    
-    .sub-title{style: 'text-align: center '} 
+
+    .sub-title{style: 'text-align: center '}
       %b
         Veja o exemplo abaixo
     %br
