--- a/engines/regularization/app/views/regularization/solicitation_monitoring/index.html.haml
+++ b/engines/regularization/app/views/regularization/solicitation_monitoring/index.html.haml
@@ -28,3 +28,9 @@
                   .content
                     Solicitação:
                     = cpf.content.html_safe
+            %tr
+              %td
+                %h4.ui.image.header
+                  .content
+                    Resposta:
+                    = cpf.solicitation_answers.first.answer rescue 'Sem resposta no momento'
