--- a/engines/regularization/app/views/regularization/home/index.html.haml
+++ b/engines/regularization/app/views/regularization/home/index.html.haml
@@ -24,4 +24,4 @@
         -# %i.icon.plane.huge
         = image_tag ('/images/search.png')
     .text-center
-      Acompanhamento de Escritura
+      Acompanhar Requerimento
