--- a/engines/regularization/app/views/regularization/solicitations/_form.html.haml
+++ b/engines/regularization/app/views/regularization/solicitations/_form.html.haml
@@ -10,23 +10,24 @@
   = f.input :subject_id, :as => :hidden, :input_html => { :value => params[:subject_id] , name:'subject_id'}
   = f.input :content, as: :text,label:'Mensagem', input_html:{ rows: 2 }
   = f.submit "Prosseguir", class: "ui button green fluid"
-.divider
-.ui.grid.container
-  .column
-    .ui.raised.segment
-      %a.ui.red.ribbon.label.bold Importante
-      %span
-        %br/
-        %br/
-        .text-justify
-          %p Declaro estar ciente da obrigatoriedade da atualização dos meus dados cadastrais junto à CODHAB sempre que ocorrer alteração de telefone, endereço, dependentes ou renda.
-          Declaro ter conhecimento completo da
+-# .divider
+-# .ui.grid.container
+-#   .column
+-#     .ui.raised.segment
+-#       %a.ui.red.ribbon.label.bold Importante
+-#       %span
+-#         %br/
+-#         %br/
+-#         .text-justify
+-#           %p Declaro estar ciente da obrigatoriedade da atualização dos meus dados cadastrais junto à CODHAB sempre que ocorrer alteração de telefone, endereço, dependentes ou renda.
+-#           Declaro ter conhecimento completo da
 
-          %b.yellow{style: 'text-decoration: underline'}
-            %a{href: 'http://www.codhab.df.gov.br/uploads/archive/files/3239b1f0464376f64e267eae43b2cfcb.pdf', target: '_blank'} Lei 3.877/2006
-          e das exigências e critérios para participação dos programas habitacionais do Distrito Federal.
-          %p Declaro que resido no Distrito Federal há pelo menos 5 anos consecutivos, possuo renda inferior a 12 salários mínimos, não sou usufrutuário(a) de imóvel residencial do Distrito Federal e que não sou, nem nunca fui proprietário(a), promitente comprador(a) ou cessionário(a) de imóvel residencial no Distrito Federal.
-          %p Responsabilizo-me civil e criminalmente pela veracidade dessas declarações e tenho conhecimento das penalidades existentes por falsa declaração, conforme dispõe o artigo 299 do Código Penal.
+-#           %b.yellow{style: 'text-decoration: underline'}
+-#             %a{href: 'http://www.codhab.df.gov.br/uploads/archive/files/3239b1f0464376f64e267eae43b2cfcb.pdf', target: '_blank'} Lei 3.877/2006
+-#           e das exigências e critérios para participação dos programas habitacionais do Distrito Federal.
+-#           %p Declaro que resido no Distrito Federal há pelo menos 5 anos consecutivos, possuo renda inferior a 12 salários mínimos, não sou usufrutuário(a) de imóvel residencial do Distrito Federal e que não sou, nem nunca fui proprietário(a), promitente comprador(a) ou cessionário(a) de imóvel residencial no Distrito Federal.
+-#           %p Responsabilizo-me civil e criminalmente pela veracidade dessas declarações e tenho conhecimento das penalidades existentes por falsa declaração, conforme dispõe o artigo 299 do Código Penal.
+
 :javascript
   $(document).ready(function(){
     $("#city_id").on('change', function(){
