--- a/engines/regularization/app/views/regularization/solicitation_documents/_form.html.haml
+++ b/engines/regularization/app/views/regularization/solicitation_documents/_form.html.haml
@@ -17,4 +17,4 @@
 .ui.grid.container
   .column.content-form
     %br
-    = link_to 'Finalizar', root_path, class: 'ui button green fluid'
+    = link_to 'Finalizar', complete_path, class: 'ui button green fluid'
