--- a/engines/regularization/app/views/regularization/solicitation_documents/_form.html.haml
+++ b/engines/regularization/app/views/regularization/solicitation_documents/_form.html.haml
@@ -1,20 +1,38 @@
 = simple_form_for @solicitation_document, url: solicitation_documents_path(@solicitation.id) do |f|
-  = f.input :attachment, as: :file, label: 'Upload', input_html: { onchange: '$(this.form).submit();' }
+	= f.input :attachment, as: :file, label: 'Upload', input_html: { onchange: "$('.ui.modal').modal('show');$(this.form).submit();" }
 .ui.container-fluid
-  .ui.grid
-    .row
-      .column.segment
-        %h3 Todas os documentos enviados
-        - @solicitation_documents.each do |document|
-          %table.ui.celled.table
-            %tbody
-              %tr
-                %td
-                  %h4.ui.image.header
-                    .content
-                      = link_to 'Arquivo', document.attachment_url, target: '_blank' rescue nil
+	.ui.grid
+		.row
+			.column.segment
+				%h3 Todas os documentos enviados
+				- @solicitation_documents.each do |document|
+					%table.ui.celled.table
+						%tbody
+							%tr
+								%td
+									%h4.ui.image.header
+										.content
+											= link_to 'Arquivo', document.attachment_url, target: '_blank' rescue nil
 .big-divider
 .ui.grid.container
-  .column.content-form
-    %br
-    = link_to 'Finalizar', complete_path, class: 'ui button green fluid'
+	.column.content-form
+		%br
+		= link_to 'Finalizar', complete_path, class: 'ui button green fluid'
+.ui.modal
+	.content
+		= image_tag '/loading_reg.gif', class: 'gifimage'
+		%h2.loading_title
+			Carregando Arquivo.
+			
+
+:css
+	.loading_title{
+		text-align:center;
+	}
+	.ui.modal{
+		box-shadow: none;
+	}
+	.gifimage{
+		display:block;
+		margin:0 auto;
+	}
