--- a/engines/candidate/app/views/candidate/home/show.html.haml
+++ b/engines/candidate/app/views/candidate/home/show.html.haml
@@ -42,7 +42,7 @@
   -#     .text-center
   -#       Aluguel Legal
 
-  - if @ticket_policy.allow_other_update? && current_cadastre.current_situation.situation_status_id == 74
+  - if @ticket_policy.allow_other_update? || current_cadastre.current_situation.situation_status_id == 74
     .column
       .ui.segment.text-center
         %a{href: "#{attendance.new_ticket_path(context_id: 5)}"}
