--- a/engines/person/app/views/person/home/show.html.haml
+++ b/engines/person/app/views/person/home/show.html.haml
@@ -53,3 +53,27 @@
         = image_tag ('/images/skyscrapper.png')
     .text-center
       Sistema de imóveis
+  .column
+    -if Core::Attendance::Attendant.where(staff_id: current_user.id).present?
+      -if @panic.present?
+        -if @panic.panic == false
+          .ui.text-center
+            %a{href: "#{person.new_panic_path}", data: { remote: true}}
+              -# %i.icon.home.outline.up.huge
+              = image_tag ('/images/warning.png')
+          .text-center
+            CHAMAR A CODHAB
+        -else
+          .ui.text-center
+            %a{href: "#{person.panic_stop_path(id: @panic.id)}", data: { remote: true}}
+              -# %i.icon.home.outline.up.huge
+              = image_tag ('/images/warning-y.png')
+          .text-center
+            CANCELAR SOLICITAÇÃO
+      -else
+        .ui.text-center
+          %a{href: "#{person.new_panic_path}", data: { remote: true}}
+            -# %i.icon.home.outline.up.huge
+            = image_tag ('/images/warning.png')
+        .text-center
+          CHAMAR A CODHAB
