--- a/engines/attendance/app/views/attendance/tickets/new.html.haml
+++ b/engines/attendance/app/views/attendance/tickets/new.html.haml
@@ -13,7 +13,7 @@
   .sixteen.wide.column
     %table.ui.celled.table
       %tbody.black
-        - if @ticket.action_allow?
+        - if @ticket.action_allow? && ![12,13].include?(@ticket.cadastre.program_id)
           %tr
             %td
               %h4.ui.image.header
@@ -33,7 +33,7 @@
                         %br
                         = link_to "Revisar documentação", ticket_continue_cadastre_path(@ticket, @action), class: 'ui button blue tiny', style: 'color: white !important'
 
-        - if @ticket.action_allow?
+        - if @ticket.action_allow? && ![12,13].include?(@ticket.cadastre.program_id)
           %tr
             %td
               %h4.ui.image.header
@@ -53,7 +53,7 @@
                         %br
                         = link_to "Revisar documentação", ticket_update_dependent_path(@ticket), class: 'ui button blue tiny', style: 'color: white !important'
 
-        - if @ticket.action_allow?
+        - if @ticket.action_allow?  && ![12,13].include?(@ticket.cadastre.program_id) 
           %tr
             %td
               %h4.ui.image.header
