att botao panico

--- a/engines/person/app/views/person/panics/_form.html.haml
+++ b/engines/person/app/views/person/panics/_form.html.haml
@@ -5,4 +5,4 @@
   %br/
   .fields
     .sixteen.wide.field
-      = f.button :submit, "Selecionar e Abrir Posto", class: 'ui green button', data: { disable_with: t(:disabled_button) }
+      = f.button :submit, "Selecionar Posto", class: 'ui green button', data: { disable_with: t(:disabled_button) }
