--- a/engines/healty/app/views/healty/dashboard/index.html.haml
+++ b/engines/healty/app/views/healty/dashboard/index.html.haml
@@ -14,4 +14,4 @@
     %br
     = link_to 'TODAS AS VOIS',  vois_all_path, class: 'ui button yellow fluid'
     %br
-    = link_to 'CRIAR SELAGEM', new_sealing_address_path, class: 'ui button green fluid'
+    = link_to 'CRIAR SELAGEM', allotments_path, class: 'ui button green fluid'
