--- a/engines/healty/app/views/healty/checks/_form.html.haml
+++ b/engines/healty/app/views/healty/checks/_form.html.haml
@@ -1,4 +1,4 @@
-= simple_form_for [@allotment, @unit,@check], url: @check.new_record? ? allotment_unit_checks_path(@allotment, @unit) : allotment_unit_checks_path(@allotment, @unit, @check), method: @check.new_record? ? :post : :put do |f|
+= simple_form_for [@allotment, @unit,@check], url: @check.new_record? ? allotment_unit_checks_path(@allotment, @unit) : allotment_unit_check_path(@allotment, @unit, @check), method: @check.new_record? ? :post : :put do |f|
   = f.input :name, label: "Nome completo"
   = f.input :cpf, label: "CPF", input_html: { class: 'cpf'}
   = f.input :born, as: :string, input_html: { class: 'date', value: f.object.born.present? ? localize(f.object.born) : nil}, label: "Data de nascimento"
@@ -7,5 +7,7 @@
   = f.input :lat_lng, label: "Longitude & Latitude"
   = f.input :password, label: "Senha"
   = f.input :password_confirmation, label: "Confirmação de senha"
-  = f.submit "Salvar", class: 'ui button green fluid'
-  = link_to "Cancelar", allotment_unit_checks_path(@allotment, @unit), class: 'ui button black fluid'
+  = f.submit "Salvar", class: 'ui button green fluid', data: { disable_with: t(:disable_with)}
+
+  %br/
+  = link_to "Cancelar", allotment_unit_checks_path(@allotment, @unit), class: 'ui button black fluid', style: 'color: white !important', data: { disable_with: t(:disable_with)}
