--- a/engines/attendance/app/views/attendance/custom/custom_tickets/message.js.haml
+++ b/engines/attendance/app/views/attendance/custom/custom_tickets/message.js.haml
@@ -1,2 +1,5 @@
-$('.ui.modal').html("#{escape_javascript(render 'message')}");
+- if current_cadastre.program_id == 13
+  $('.ui.modal').html("#{escape_javascript(render 'message_reallocation')}");
+- else
+  $('.ui.modal').html("#{escape_javascript(render 'message')}");
 $('.ui.modal').modal('show');
