--- a/engines/attendance/app/views/attendance/custom/custom_tickets/message.js.haml
+++ b/engines/attendance/app/views/attendance/custom/custom_tickets/message.js.haml
@@ -1,4 +1,4 @@
-- if current_cadastre.program_id == 13
+- if [12,13].include?(current_cadastre.program_id)
   $('.ui.modal').html("#{escape_javascript(render 'message_reallocation')}");
 - else
   $('.ui.modal').html("#{escape_javascript(render 'message')}");
