--- a/engines/candidate/app/views/candidate/home/show.html.haml
+++ b/engines/candidate/app/views/candidate/home/show.html.haml
@@ -24,7 +24,7 @@
       .text-center
         Habilitação
 
-  - if current_cadastre.program_id == 13
+  - if [12,13].include?(current_cadastre.program_id)
     .column
       .ui.segment.text-center{style: 'background-color: #18af25 !important'}
         %a{href: "#{attendance.custom_custom_tickets_path}"}
@@ -51,7 +51,7 @@
   -#     .text-center
   -#       Aluguel Legal
 
-  - if (@ticket_policy.allow_other_update? || current_cadastre.current_situation.situation_status_id == 74) && current_cadastre.program_id != 13 
+  - if (@ticket_policy.allow_other_update? || current_cadastre.current_situation.situation_status_id == 74) && ![12,13].include?(current_cadastre.program_id)
     .column
       .ui.segment.text-center
         %a{href: "#{attendance.new_ticket_path(context_id: 5)}"}
