--- a/engines/attendance/app/views/attendance/custom/custom_tickets/index.html.haml
+++ b/engines/attendance/app/views/attendance/custom/custom_tickets/index.html.haml
@@ -1,11 +1,11 @@
 .ui.grid#custom
   - if @ticket.nil?
-    - if current_cadastre.program_id == 13
+    - if [12,13].include?(current_cadastre.program_id)
       = render 'welcome_reallocation'
     - else
       = render 'welcome'
   - else
-    - if current_cadastre.program_id == 13
+    - if [12,13].include?(current_cadastre.program_id)
       = render 'ticket_reallocation'
     - else
       = render 'ticket'
