--- a/engines/candidate/app/views/candidate/home/show.html.haml
+++ b/engines/candidate/app/views/candidate/home/show.html.haml
@@ -16,7 +16,7 @@
 .divider
 .ui.three.column.grid.container.black
   /- if current_cadastre.id == 245419 || current_cadastre.cadastre_convocations.where(status: true, convocation_id: 1649).present?
-  - if current_cadastre.id == 245419 || current_cadastre.current_situation.situation_status_id == 3
+  - if current_cadastre.id == 245419 || (current_cadastre.current_situation.present? && current_cadastre.current_situation.situation_status_id == 3)
     .column
       .ui.segment.text-center{style: 'background-color: #0892ff !important'}
         %a{href: "#{attendance.custom_custom_tickets_path}"}
@@ -51,7 +51,7 @@
   -#     .text-center
   -#       Aluguel Legal
 
-  - if (@ticket_policy.allow_other_update? || current_cadastre.current_situation.situation_status_id == 74) && ![12,13].include?(current_cadastre.program_id)
+  - if (@ticket_policy.allow_other_update? || (current_cadastre.current_situation.present? && current_cadastre.current_situation.situation_status_id == 74)) && ![12,13].include?(current_cadastre.program_id)
     .column
       .ui.segment.text-center
         %a{href: "#{attendance.new_ticket_path(context_id: 5)}"}
