--- a/engines/entity/app/views/entity/indications/new.html.haml
+++ b/engines/entity/app/views/entity/indications/new.html.haml
@@ -1,6 +1,6 @@
 .ui.grid
   .two.wide.mobile.column
-    %a{href: "#{entity.root_path}"}
+    %a{href: "#{entity.indications_path}"}
       %i.big.arrow.left.icon
   .thirteen.wide.mobile.column.text-center
     .title-header Indicação
