--- a/engines/entity/app/views/entity/indications/index.html.haml
+++ b/engines/entity/app/views/entity/indications/index.html.haml
@@ -3,29 +3,23 @@
     %a{href: "#{entity.root_path}"}
       %i.big.arrow.left.icon
   .thirteen.wide.mobile.column.text-center
-    .title-header Unidades para distribuição (#{@units.where(situation: 0).count})
-    .sub-title Listagem de unidades
+    .title-header Indicação de candidatos 
+    .sub-title Listagem de empreendimentos
 .ui.container
   %table.ui.celled.table
     %tbody
       
-      - if @units.present?
-        - @units.each do |entity|
+      - if @enterprises.present?
+        - @enterprises.each do |enterprise|
           %tr
             %td
-              %h4.ui.image.header
-                %i.icon.big.check{class: entity.candidato_indicado? ? 'green' : 'gray'}
-                .content
-                  = link_to entity.unit.complete_address, new_indication_path(indication_id: entity.id)
-                  .sub.header
-                    = entity.unit.city.name
-                  .sub.header
-                    .mini-divider
-                    = entity.cadastre.name rescue nil
-                    %b= entity.cadastre.presenter.current_situation_name rescue nil
-
+            %td
+              %p
+                %b= link_to enterprise.name.to_s.mb_chars.upcase, new_indication_path(enterprise_id: enterprise.id), style: 'color: black !important'
+              %p
+                %i (Toque para iniciar a indicação)
       - else
         %tr
           %td
           %td.text-center
-            %i Nenhuma unidade a ser distribuída.
+            %i Nenhum empreendimento vínculado.
